work/20230215/example-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  type: ClusterIP
  selector:
    appname: example-app
  ports:
    - name: example-web
      port: 8080
      targetPort: 80
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: example-ds
spec:
  selector:
    matchExpressions:
    - key: appname
      operator: In
      values:
        - example-app
  template:
    metadata:
      labels:
        appname: example-app
    spec:
      containers:
        - name: example-web
          image: httpd:2.4
          ports:
          - name: example-http
            containerPort: 80
            protocol: TCP
