work/20230215/myapp-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-lb
spec:
  type: LoadBalancer
  selector:
    app: myapp-rs
  ports:
  - port: 80
    targetPort: 8080
