work/20230215/myapp-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  defaultBackend:
    service:
      name: myapp-svc-np
      port:
        number: 80
    rules:
    - host: myapp.example.com
